// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes organizations routes aircraft routes settings components AircraftSettings redirects to organization page if aircraft was not found 1`] = `
<div>
  Organization Page
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings redirects to start page if organization was not found 1`] = `
<div>
  Start Page
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders aircraft settings when everything is loaded 1`] = `
<div
  className="AircraftSettings-container-1"
>
  <h1
    className="MuiTypography-root-13 MuiTypography-display1-17 MuiTypography-gutterBottom-31"
  >
    HBKFW
  </h1>
  <div>
    <h2
      className="MuiTypography-root-13 MuiTypography-title-19 MuiTypography-gutterBottom-31"
    >
      <span>
        Treibstofftypen
      </span>
    </h2>
    <ul
      className="MuiList-root-39 MuiList-dense-41 MuiList-padding-40"
    >
      <li
        className="MuiListItem-root-43 MuiListItem-default-46 MuiListItem-dense-47"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-54 MuiListItemText-dense-56"
        >
          <span
            className="MuiTypography-root-13 MuiTypography-subheading-20 MuiListItemText-primary-57 MuiListItemText-textDense-59"
          >
            AvGas
          </span>
          <p
            className="MuiTypography-root-13 MuiTypography-body1-22 MuiTypography-colorTextSecondary-37 MuiListItemText-secondary-58 MuiListItemText-textDense-59"
          >
            avgas
          </p>
        </div>
      </li>
      <li
        className="MuiListItem-root-43 MuiListItem-default-46 MuiListItem-dense-47"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-54 MuiListItemText-dense-56"
        >
          <span
            className="MuiTypography-root-13 MuiTypography-subheading-20 MuiListItemText-primary-57 MuiListItemText-textDense-59"
          >
            MoGas
          </span>
          <p
            className="MuiTypography-root-13 MuiTypography-body1-22 MuiTypography-colorTextSecondary-37 MuiListItemText-secondary-58 MuiListItemText-textDense-59"
          >
            mogas
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders loading icon if aircraft not loaded 1`] = `
<div
  className="LoadingIcon-container-2"
>
  <div
    className="MuiCircularProgress-root-4 MuiCircularProgress-colorPrimary-7 MuiCircularProgress-indeterminate-6 LoadingIcon-icon-3"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-9"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-10 MuiCircularProgress-circleIndeterminate-12"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders loading icon if organization not loaded 1`] = `
<div
  className="LoadingIcon-container-2"
>
  <div
    className="MuiCircularProgress-root-4 MuiCircularProgress-colorPrimary-7 MuiCircularProgress-indeterminate-6 LoadingIcon-icon-3"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-9"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-10 MuiCircularProgress-circleIndeterminate-12"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;
